<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_diet"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/diet"
        app:layout_constraintBottom_toTopOf="@+id/button_remedies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <Button
        android:id="@+id/button_remedies"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/remedies"
        app:layout_constraintBottom_toTopOf="@+id/button_mudras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_diet" />

    <Button
        android:id="@+id/button_mudras"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/yog_mudras"
        app:layout_constraintBottom_toTopOf="@+id/button_asana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_remedies" />

    <Button
        android:id="@+id/button_asana"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/yog_asanas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_mudras" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hello_first_fragment"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@id/textview_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textview_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_text"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />


    <in.yoska.yogamatic.custom.CustomSpinner
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_margin="10dp"
        android:layout_width="200dp"
        android:dropDownWidth="200dp"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:popupBackground="@android:color/white"
        android:background="@drawable/spinner_bg"
        android:stateListAnimator="@drawable/spinner_sla"
        android:paddingEnd="14dp"
        android:popupElevation="3dp"
        app:layout_constraintBottom_toTopOf="@id/button_diet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_bmi" />


</androidx.constraintlayout.widget.ConstraintLayout>