<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    android:background="#F7FFFFFF"
    android:minWidth="19dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:background="#F7FFFFFF"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F7FFFFFF"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7FFFFFF"
                app:subtitleTextColor="#0A0A0A"
                app:titleTextColor="#111111" />



            <!--    Your code here -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="672dp"
                android:background="#68B9F6CA"
                tools:context=".AilmentListActivity">


                <TextView
                    android:id="@+id/textview_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/select_option"
                    android:textSize="30dp"
                    app:layout_constraintBottom_toTopOf="@id/button_diet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_diet"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/diet"
                    app:layout_constraintBottom_toTopOf="@+id/button_remedies"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textview_first" />

                <Button
                    android:id="@+id/button_remedies"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/remedies"
                    app:layout_constraintBottom_toTopOf="@+id/button_mudras"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_diet" />

                <Button
                    android:id="@+id/button_mudras"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yog_mudras"
                    app:layout_constraintBottom_toTopOf="@+id/button_asana"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_remedies" />

                <Button
                    android:id="@+id/button_asana"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yog_asanas"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_mudras" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>